# LinkSeg

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: predict.py  preprocess_data.py
