[project]
name = "linkseg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # dgl: CUDA 12.4 wheel (JITs sm_90→sm_120 via PTX) on Linux; CPU wheel on macOS
    "dgl>=2.4.0 ; sys_platform == 'linux'",
    "dgl==1.1.1 ; sys_platform == 'darwin'",
    "einops==0.8.0",
    "jams==0.3.4",
    "librosa==0.10.2.post1",
    "madmom",
    "mir-eval==0.7",
    "numpy==1.23.5",
    "pydub==0.25.1",
    "pytorch-lightning==2.4.0",
    "scikit-learn==1.3.2",
    "setuptools<70",
    "torch==2.9.0",
    "torch-geometric==2.6.1",
    "torchaudio==2.9.0",
    "torchmetrics==1.4.2",
    "tqdm==4.66.5",
    "ujson==5.10.0",
]

# PyTorch CUDA 12.8 index — provides torch/torchaudio 2.9.0+cu128 on Linux
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# DGL find-links page — dgl 2.4.0+cu124 (JITs sm_90→sm_120 via PTX) on Linux
[[tool.uv.index]]
name = "dgl-cu124"
url = "https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html"
format = "flat"
explicit = true

[tool.uv.sources]
madmom = { git = "https://github.com/CPJKU/madmom" }
# On Linux: CUDA builds from the PyTorch cu128 index; macOS falls back to PyPI CPU/MPS wheels
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
# On Linux: CUDA build from the DGL find-links page; macOS falls back to PyPI
dgl = [
    { index = "dgl-cu124", marker = "sys_platform == 'linux'" },
]

[tool.uv]
# Override dgl 2.4's torch~=2.4 metadata constraint so uv keeps torch 2.9.0.
# The local suffix (+cu128) is transparent to the resolver: 2.9.0+cu128 satisfies ==2.9.0.
override-dependencies = ["torch==2.9.0", "torchaudio==2.9.0"]
